--- a/wrangler-template.toml
+++ b/wrangler-template.toml
@@ -25,7 +25,7 @@ mode = "smart"
 
 [vars]
 CLOUD_FLARE_AI_GATEWAY_NAME = "YOUR_CLOUD_FLARE_AI_GATEWAY_NAME"
-DEFULT_GEMINI_MODEL = "gemini-1.5-flash"
+DEFAULT_GEMINI_MODEL = "gemini-1.5-flash"
 
 # Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#workers-ai
